# homework_fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  ml.py  pyproject.toml  schemas.py  test.py
app/: app.py  ml.py  schemas.py
