[project]
name = "homework-fastapi"
version = "0.1.0"
description = "ML Model API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "fastapi-keycloak>=1.1.0",
    "sacremoses>=0.1.1",
    "torch>=2.9.0",
    "transformers[sentencepiece]>=4.57.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
